--- a/H1/Punto3.ipynb
+++ b/H1/Punto3.ipynb
@@ -3,7 +3,8 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install pyvis > /dev/null"
+        "%%capture\n",
+        "!pip install pyvis"
       ],
       "metadata": {
         "id": "NfgnohIguQR2"
@@ -26,7 +27,7 @@
         "outputId": "eb68ef62-0306-41d4-f00f-b785c71fb74e"
       },
       "id": "q2wd_zAeTi-_",
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -52,7 +53,7 @@
         "id": "Lo2bG64GZEGD"
       },
       "id": "Lo2bG64GZEGD",
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -97,7 +98,7 @@
         "id": "pwBM4EjMZyrK"
       },
       "id": "pwBM4EjMZyrK",
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -115,7 +116,7 @@
         "id": "efYDP46Vokwe"
       },
       "id": "efYDP46Vokwe",
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -132,7 +133,7 @@
         "outputId": "6487d6af-b69f-41f8-a0f6-22ff6257e8b1"
       },
       "id": "sl1qvmPenh4z",
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -159,7 +160,7 @@
         }
       },
       "id": "5jlVlhRCPMhH",
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -187,7 +188,7 @@
         }
       },
       "id": "3sUQSNEIPetY",
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -229,7 +230,7 @@
         "outputId": "7f560256-1f30-4fd6-d4ea-8b5d566a21a7"
       },
       "id": "4xC3Nn1bevIR",
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -268,7 +269,7 @@
         "id": "ZQ_5o5MUfqRZ"
       },
       "id": "ZQ_5o5MUfqRZ",
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -284,7 +285,7 @@
         "outputId": "347c17ea-00c5-43f6-ea6b-e08a93fbb849"
       },
       "id": "fH-M6bzVf4p0",
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -318,7 +319,7 @@
         "id": "2hrsZNzKaJWt"
       },
       "id": "2hrsZNzKaJWt",
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -342,7 +343,7 @@
         "outputId": "bf0a2c69-7d0d-4b9a-9f0a-95cf7044632e"
       },
       "id": "h20zHT_miUvN",
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
