--- a/H1/Punto3.ipynb
+++ b/H1/Punto3.ipynb
@@ -11,7 +11,7 @@
         "id": "q2wd_zAeTi-_"
       },
       "id": "q2wd_zAeTi-_",
-      "execution_count": 24,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -30,7 +30,7 @@
         "id": "Lo2bG64GZEGD"
       },
       "id": "Lo2bG64GZEGD",
-      "execution_count": 25,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -74,7 +74,7 @@
         "id": "pwBM4EjMZyrK"
       },
       "id": "pwBM4EjMZyrK",
-      "execution_count": 26,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -91,7 +91,7 @@
         "id": "tNKjx0mSmhzP"
       },
       "id": "tNKjx0mSmhzP",
-      "execution_count": 27,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -112,7 +112,7 @@
         "id": "efYDP46Vokwe"
       },
       "id": "efYDP46Vokwe",
-      "execution_count": 28,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -134,10 +134,10 @@
           "height": 516
         },
         "id": "sl1qvmPenh4z",
-        "outputId": "74dc21d6-b7ef-40e4-9970-995e9fe033b2"
+        "outputId": "abc9ef6f-6b4d-4c6f-baa1-a125578dee08"
       },
       "id": "sl1qvmPenh4z",
-      "execution_count": 29,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "display_data",
@@ -180,13 +180,13 @@
       ],
       "metadata": {
         "id": "5jlVlhRCPMhH",
-        "outputId": "3fa1910e-93c0-4bcd-febe-45683873d05a",
+        "outputId": "b4ad70d2-6874-4b86-eaf7-0d2f54bd0dc0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "5jlVlhRCPMhH",
-      "execution_count": 30,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -196,7 +196,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 30
+          "execution_count": 7
         }
       ]
     },
@@ -269,13 +269,13 @@
       ],
       "metadata": {
         "id": "2G4Kydrr8ZHH",
-        "outputId": "70764a60-e572-4b3c-e5ad-d1647253d0b3",
+        "outputId": "5b001919-9bd2-4df7-d3e1-c0f4cae95868",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "2G4Kydrr8ZHH",
-      "execution_count": 31,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -325,7 +325,7 @@
         "id": "3sUQSNEIPetY"
       },
       "id": "3sUQSNEIPetY",
-      "execution_count": 32,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -347,10 +347,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QTf-DFzGVgb5",
-        "outputId": "776cfc7f-958c-4974-82db-b893a2b0ecf1"
+        "outputId": "2f2ed824-5afb-43e0-b88e-6d47bb3d0657"
       },
       "id": "QTf-DFzGVgb5",
-      "execution_count": 33,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -392,10 +392,10 @@
           "height": 516
         },
         "id": "5VqYhDo0fEEV",
-        "outputId": "325ecd27-54df-49ef-949e-5552f2ebb6c0"
+        "outputId": "eda1bc5e-ceba-4e4f-b74a-887488bab94b"
       },
       "id": "5VqYhDo0fEEV",
-      "execution_count": 34,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
@@ -431,7 +431,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "29ca6835955897b5",
-        "outputId": "0f85afd0-2541-4ad3-e9fb-ed4e528880cc"
+        "outputId": "ca839d61-ead4-4454-9870-207f7e38ab37"
       },
       "cell_type": "code",
       "outputs": [
@@ -446,10 +446,10 @@
             ]
           },
           "metadata": {},
-          "execution_count": 35
+          "execution_count": 12
         }
       ],
-      "execution_count": 35,
+      "execution_count": 12,
       "source": [
         "f>= 0"
       ],
@@ -474,7 +474,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "b7a0a2a85a0a724",
-        "outputId": "2a61df52-5179-490d-c5ff-09703b876059"
+        "outputId": "c0e13543-5d37-478b-f06b-6d1371e14fcb"
       },
       "cell_type": "code",
       "outputs": [
@@ -490,7 +490,7 @@
           ]
         }
       ],
-      "execution_count": 36,
+      "execution_count": 13,
       "source": [
         "# Compute net flow at each node\n",
         "v = B @ f\n",
@@ -555,10 +555,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0iyJAcS4jvrM",
-        "outputId": "c17a1bdf-5164-45b1-ec0a-7fc8e9ec35b9"
+        "outputId": "55b674e1-3ac2-48bd-b744-a9fb916967f7"
       },
       "id": "0iyJAcS4jvrM",
-      "execution_count": 37,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -586,14 +586,14 @@
       ],
       "metadata": {
         "id": "q-i_UQefvuia",
-        "outputId": "b73a08de-e5b3-4f06-a175-a95d29dd8007",
+        "outputId": "e4defd99-ba52-4703-80f8-ad7b6ed63066",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 516
         }
       },
       "id": "q-i_UQefvuia",
-      "execution_count": 48,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "display_data",
@@ -648,7 +648,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6cf6228a66ca7862",
-        "outputId": "3d30ff5a-68e6-4b38-b085-3e01091d90b2"
+        "outputId": "25e8abef-0aca-44e8-f318-07bad8b6c834"
       },
       "cell_type": "code",
       "outputs": [
@@ -670,7 +670,7 @@
           ]
         }
       ],
-      "execution_count": 39,
+      "execution_count": 16,
       "source": [
         "B # Traffic matrix\n",
         "n_edges #Number of edges of B\n",
@@ -718,7 +718,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ac7f67451fa4de92",
-        "outputId": "6599c2e4-68ea-4d25-8b33-0e36ccf7f39a"
+        "outputId": "ee1114da-a330-42bd-c412-edee3fed04f2"
       },
       "cell_type": "code",
       "outputs": [
@@ -730,7 +730,7 @@
           ]
         }
       ],
-      "execution_count": 40,
+      "execution_count": 17,
       "source": [
         "wardrop_f = fe\n",
         "wardrop_cost = sum(wardrop_f.value*l/(1 - wardrop_f.value/C))\n",
@@ -784,10 +784,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "u-GHl6Ejcr19",
-        "outputId": "985db2ba-cdf2-4e70-9c92-8a5e4da03bc8"
+        "outputId": "25b3ca63-6a9f-4736-9fac-a5778063c0eb"
       },
       "id": "u-GHl6Ejcr19",
-      "execution_count": 44,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -820,10 +820,10 @@
           "height": 516
         },
         "id": "uhbuGZxp6P6O",
-        "outputId": "5a02b008-7704-4bac-892e-f11637a9ebd9"
+        "outputId": "44cefdd6-11a4-4f68-a3d5-a561bef53e3e"
       },
       "id": "uhbuGZxp6P6O",
-      "execution_count": 47,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "display_data",
@@ -838,9 +838,49 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "np.around(opt_flow-fe.value, decimals=2, out=None)"
+      ],
+      "metadata": {
+        "id": "7IiFqAceBL61",
+        "outputId": "cd298985-bdf4-440b-a75d-46df4da43ec2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "7IiFqAceBL61",
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 1.57, -0.17,  0.04,  0.04, -1.57, -0.04,  0.25,  0.3 ,  0.19,\n",
+              "        1.74,  0.01, -0.23,  0.  ,  0.04, -1.53, -0.14,  0.06,  1.45,\n",
+              "       -0.04, -0.12, -0.18, -0.29, -0.16,  0.  ,  0.06, -0.12,  0.06,\n",
+              "        0.06])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
-        "## g\n",
+        "As seen in the graph and the substraction above, the wardrop equilibrium gives a very good aproximation of the social optimum $f^*$"
+      ],
+      "metadata": {
+        "id": "ah36XHwSBJDq"
+      },
+      "id": "ah36XHwSBJDq"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **g)**\n",
         "\n",
         "Instead of the total travel time, let the cost for the system be the total additional travel time compared to the total travel time in free flow, given by\n",
         "$$\n",
@@ -925,7 +965,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yZekHTZE9-Hp",
-        "outputId": "6d5b522f-839a-4b19-8c79-40068174020f",
+        "outputId": "0d07ae94-852e-445f-c99d-4192676daa56",
         "ExecuteTime": {
           "end_time": "2024-11-17T15:52:06.553049Z",
           "start_time": "2024-11-17T15:52:06.369158Z"
@@ -944,7 +984,7 @@
           ]
         }
       ],
-      "execution_count": 42
+      "execution_count": 21
     },
     {
       "cell_type": "markdown",
@@ -976,14 +1016,23 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Having\n",
-        "$$\n",
-        "  \\tau_e(f_e) = \\frac{l_e}{1 - \\frac{f_e}{c_e}}\n",
-        "$$\n",
-        "After the derivation, the expression is:\n",
+        "In order to obtain the toll vector, we need to derivate the next expression and multiply it by $f_e^*$.\n",
+        "\n",
+        "$$ \\psi_e (f_e) = f_e (\\tau_e (f_e)- l_e) $$\n",
+        "\n",
+        "Since, $l_e$ is a constant, the result of the derivation is:\n",
         "$$\n",
         "  \\tau_e'(f_e^*) = \\frac{l_e c_e}{(c_e-f_e^*)^2}\n",
-        "$$\n",
+        "$$\n"
+      ],
+      "metadata": {
+        "id": "JOJKTeJq_XFt"
+      },
+      "id": "JOJKTeJq_XFt"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "We also have that the objective function is:\n",
         "$$\n",
         "f^{(w^*)} =  min \\sum_e \\int_0^{f_e} \\psi_e(s)~\\mathrm{d}s + \\omega_e^* f_e\n",
@@ -1015,19 +1064,19 @@
         "l # 1d array\n",
         "fe = cp.Variable(n_edges) # Variable representing the flow on each edge\n",
         "\n",
-        "d_prime = cp.multiply(cp.multiply(l,C),cp.inv_pos(cp.power((C - new_soc_opt_value),2))) ##POR QUE USA LA DERIVADA DE TAU Y NO DE PSI??\n",
-        "omega = cp.multiply(new_soc_opt_value,d_prime)\n",
+        "t_prime = cp.multiply(cp.multiply(l,C),cp.inv_pos(cp.power((C - new_soc_opt_value),2)))\n",
+        "omega = cp.multiply(new_soc_opt_value,t_prime)\n",
         "\n",
         "function = cp.sum(-cp.multiply(cp.multiply(C,l),cp.log(1-cp.multiply(fe,cp.inv_pos(C)))) - cp.multiply(fe,l) + cp.multiply(fe,omega))\n",
         "objective = cp.Minimize(function)\n",
-        "constraints = [B @ fe == nu, fe >=0, fe<=C]\n",
+        "constraints = [B @ fe == nu, fe >=0]\n",
         "prob = cp.Problem(objective, constraints)\n",
         "\n",
         "# The optimal objective value is returned by `prob.solve()`.\n",
         "new_result_w = prob.solve()\n",
         "print(\"New Wardrop equilibrium:\", np.around(fe.value, decimals=1, out=None))\n",
         "new_wardrop_f = fe\n",
-        "new_wardrop_cost = sum(new_wardrop_f.value*l/(1 - new_wardrop_f.value/C) - new_wardrop_f.value*l) ##NO ENTIENDO DE DONDE SALIO\n",
+        "new_wardrop_cost = sum(new_wardrop_f.value*l/(1 - new_wardrop_f.value/C) - new_wardrop_f.value*l)\n",
         "print(\"New Wardrop cost: \",np.around (new_wardrop_cost, decimals = 1))"
       ],
       "metadata": {
@@ -1035,20 +1084,52 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "c1rJuvgwCp3L",
-        "outputId": "dce3d95d-597a-454a-d00b-1a37ccb46621"
+        "outputId": "3f773cef-c92d-4b36-b408-5aad86260cf8"
       },
       "id": "c1rJuvgwCp3L",
-      "execution_count": 43,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "New Wardrop equilibrium: [6393.8 5420.8 3243.8 3243.8 9888.2 4530.8 3051.7 2612.  2895.3  973.\n",
-            "    0.  2177.     0.  3243.8 5357.4 2969.6 4839.8 2452.   439.7 1893.7\n",
-            " 3409.4 5303.  2140.2    0.  6058.2 5384.  4839.8 4839.8]\n",
+            "New Wardrop equilibrium: [6393.8 5420.9 3243.6 3243.6 9888.2 4530.6 3051.3 2611.9 2895.4  972.9\n",
+            "    0.  2177.3    0.  3243.6 5357.6 2969.9 4839.9 2452.2  439.4 1893.7\n",
+            " 3409.3 5303.1 2140.3    0.  6058.2 5383.9 4839.9 4839.9]\n",
             "New Wardrop cost:  13550.2\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.around(opt_flow-fe.value, decimals=2, out=None)"
+      ],
+      "metadata": {
+        "id": "ASCr6fQyEYhI",
+        "outputId": "8f19bdbe-68fe-4eba-941f-61a302743d56",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "ASCr6fQyEYhI",
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([-1.9250e+01,  2.4450e+02, -3.3894e+02, -3.3895e+02,  1.9250e+01,\n",
+              "       -2.6300e+00, -1.0076e+02, -1.2448e+02,  1.2281e+02, -2.6375e+02,\n",
+              "        1.0000e-02,  5.8344e+02,  0.0000e+00, -3.3895e+02,  2.1880e+01,\n",
+              "       -2.0374e+02,  6.0000e+01, -1.6562e+02,  2.3730e+01,  3.3615e+02,\n",
+              "       -1.8002e+02,  1.5613e+02,  1.6702e+02,  0.0000e+00,  1.1192e+02,\n",
+              "       -1.7193e+02,  6.0000e+01,  6.0000e+01])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
         }
       ]
     }
@@ -1072,8 +1153,7 @@
       "version": "2.7.6"
     },
     "colab": {
-      "provenance": [],
-      "toc_visible": true
+      "provenance": []
     }
   },
   "nbformat": 4,
